# grainlify

./: .gitignore  DEMO.md  README.md  test_contract.bat
contracts/grainlify-core/: Cargo.toml
contracts/grainlify-core/src/: asset.rs  governance.rs  lib.rs  multisig.rs  test_core_monitoring.rs  test_version_helpers.rs
contracts/grainlify-core/src/test/: e2e_upgrade_migration_tests.rs  upgrade_rollback_tests.rs
contracts/grainlify-core/test_snapshots/migration_hook_tests/: chained_migration_v1_through_v3_preserves_final_state.1.json  idempotent_migration_does_not_emit_extra_events.1.json  migrate_panics_for_unsupported_version_jump.1.json  migrate_panics_without_any_auth.1.json  migrate_rejects_lower_target_version.1.json  migrate_rejects_non_admin_caller.1.json  migrate_rejects_same_version_as_target.1.json  migrate_succeeds_with_correct_admin_auth.1.json  migrate_to_version_zero_is_rejected.1.json  migrate_v1_to_v2_works_when_starting_at_v1.1.json  migrate_v1_to_v3_chains_through_v2.1.json  migrate_v2_to_v3_executes_only_once.1.json  migrate_v2_to_v3_records_correct_state.1.json  migration_hash_is_stored_and_retrievable.1.json  migration_preserves_admin_address.1.json  migration_state_from_version_matches_pre_migration_version.1.json  migration_with_all_zero_hash.1.json  migration_with_max_byte_hash.1.json  no_migration_state_before_first_migrate.1.json  repeated_migrate_calls_do_not_change_version.1.json  sequential_independent_migrations_update_state.1.json  set_version_and_migrate_interact_correctly.1.json  successful_migration_emits_events.1.json  (+1 more)
(+583 files in other folders)
